--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@iconify/vue": "^4.3.0",
     "nuxt": "^3.15.2",
+    "swiper": "^11.2.1",
     "vue": "latest",
     "vue-router": "latest"
   }
