--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@iconify/vue": "^4.3.0",
+    "aos": "^2.3.4",
     "nuxt": "^3.15.2",
     "swiper": "^11.2.1",
     "vue": "latest",
