--- a/package.json
+++ b/package.json
@@ -11,10 +11,15 @@
   },
   "dependencies": {
     "@iconify/vue": "^4.3.0",
+    "@nuxtjs/i18n": "^9.2.0",
+    "@pinia/nuxt": "^0.10.1",
     "aos": "^2.3.4",
+    "axios": "^1.7.9",
     "nuxt": "^3.15.2",
+    "pinia": "^3.0.1",
     "swiper": "^11.2.1",
     "vue": "latest",
+    "vue-i18n": "^10.0.5",
     "vue-router": "latest"
   }
 }
